[package]
name = "flashbench"
version = "0.1.0"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux_types = { path = "../linux_types" }
